--- a/Sommelier4/Sommelier4.csproj
+++ b/Sommelier4/Sommelier4.csproj
@@ -192,6 +192,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="JS\Bootstrap.js" />
+    <Content Include="JS\Default.js" />
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\Daniel.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
@@ -285,12 +286,14 @@
     </Compile>
     <Compile Include="Site.Mobile.Master.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
