--- a/Sommelier4/Web.config
+++ b/Sommelier4/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,10 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Sommelier4-20160113195229;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Sommelier4-20160113195229.mdf" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Sommelier4-20160113195229;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Sommelier4-20160113195229.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="OdestinoConnectionString1" connectionString="Data Source=localhost;Initial Catalog=Odestino;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0" defaultLanguage="C#" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" defaultUrl="~/" />
     </authentication>
